--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
   <form action="#" method="post">
     <label for="fullname">Name</label>
-    <input>
+    <input type="text">
   </form>
 
 </body>
