--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
   <form action="#" method="post">
     <label for="fullname">Name</label>
-    <input type="text" id="fullname" name="fullname" placeholder="your name">
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
   </form>
 
 </body>
