--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
   <form action="#" method="post">
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email"></label>
   </form>
 
 </body>
