--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email"></label>
+    <input>
+    <label for="phone"></label>
   </form>
 
 </body>
