Automatically backed up by Learn

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,8 @@
     <label for="email"></label>
     <input>
     <label for="phone"></label>
+    <input>
+    <label for="message"></label>
   </form>
 
 </body>
