--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <form action="#" method="post">
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
-    <label for="email"></label>
+    <label for="email">Email</label>
     <input type="e">
     <label for="phone"></label>
     <input>
