--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
-    <input type="e">
+    <input type="email" id="email" name="email">
     <label for="phone"></label>
     <input>
     <label for="message"></label>
