Automatically backed up by Learn

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <input type="text" id="fullname" name="fullname" placeholder="your name" required>
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="your email" required>
-    <label for="phone"></label>
+    <label for="phone">Phone</label>
     <input>
     <label for="message"></label>
     <textarea></textarea>
