--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="your email" required>
     <label for="phone">Phone</label>
-    <input>
+    <input type="tel" id="tel">
     <label for="message"></label>
     <textarea></textarea>
     <input>
