--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <input type="email" id="email" name="email" placeholder="your email" required>
     <label for="phone">Phone</label>
     <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
-    <label for="message"></label>
+    <label for="message">Message</label>
     <textarea></textarea>
     <input>
   </form>
